--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36175,3 +36175,21 @@ html[data-bs-theme="dark"] .bg-priority-low:checked {
 .input-search-width {
   width: 13.75rem;
 }
+
+.fa-w-16 {
+  width: 12px !important;
+}
+
+.fa-w-10 {
+  width: 10px !important;
+}
+
+.fa-w-14 {
+  width: 14px !important;
+}
+.fa-w-18 {
+  width: 14px !important;
+}
+.fa-w-20 {
+  width: 14px !important;
+}
